--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="./firework.css">
+    <link rel="stylesheet" href="https://nguyenkhaan.github.io/Font/Boiling-BlackDemo.ttf">
 </head>
 <body>
     <div class="firework"></div>
