--- a/index.html
+++ b/index.html
@@ -27,16 +27,15 @@
             <div class="my-form-1-title">
                 <h2>HAPPY</h2>
                 <h2>BIRTHDAY</h2>
-                <h2>TO YOU</h2>
+                <h2>VÂN NHI</h2>
             </div>
         </div>
         <div class="my-form-2">
-            <p>Wishing you a Wonderful Day!</p>
+            <p>Wishing Nhi a Wonderful Day!</p>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                Aliquam sit amet elit quis augue porttitor euismod a eget metus. 
-                Aenean pharetra eros quis sem dapibus imperdiet. 
-                Cras id ipsum sapien. Sed scelerisque mi a mattis venenatis. 
+                
+Chúc mừng sinh nhật Vân Nhi! Chúc bạn luôn cười thật tươi, tràn đầy hạnh phúc và luôn tỏa sáng như ban mai. 
+Mỗi ngày đều sẽ là một câu chuyện cổ tích thật ngọt ngào dành cho bạn! 🎂🎈💕 💕💕💕
             </p>
             <p>
                 Best wishes, 
